# text2rrule

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: text2rrule.rs
src/: emit.rs  en.rs  eo.rs  error.rs  lib.rs  parser.rs  pattern.rs  token.rs
src/locales/: en.rs  eo.rs  mod.rs
tests/: en_e2e.rs  eo_e2e.rs
