[package]
name = "text2rrule"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
authors = ["Adam Milner <carmiac@gmail.com>"]
description = "Convert plain-language descriptions of recurring events into RFC 5545 RRULE strings."
license = "MPL-2.0"
repository = "https://github.com/carmiac/text2rrule"
readme = "README.md"
keywords = ["rrule", "rfc5545", "recurrence", "calendar", "icalendar"]
categories = ["date-and-time", "parser-implementations", "internationalization"]
exclude = [".github/"]

[dependencies]
chrono = "0.4.44"
sys-locale = "0.3.2"
tracing = "0.1.44"

[dev-dependencies]
pico-args = "0.5.0"
tracing-subscriber = "0.3.23"
